[package]
name = "joy"
version = "0.1.3"
authors = ["M Farkas-Dyck <strake888@gmail.com>"]
description = "Joystick input library"
keywords = ["joystick", "input"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/strake/joy.rs"
documentation = "https://docs.rs/joy/"

[dependencies]
libc = { version = "0.2", default-features = false }
null-terminated = "0.2.1"
syscall = "0.2"
